--- a/output/Report.tex
+++ b/output/Report.tex
@@ -84,7 +84,7 @@
 
 		\item There is good performance gain when the program is using multiple threads rather than single thread.
 
-		\item When the threads amount is exceeding the actual parallel thread size of the CPU runtime plot has random peaks and wells.
+		\item When the threads amount is exceeding the actual parallel threads of the CPU runtime plot has random peaks and wells and when threads amout is equal to actual parallel threads of CPU it has very good performance.
 
 
 	\end{itemize}
